// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SelectField /> > should allow arbitrary values 1`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid searchable focused multiple"
    id="junipero-select-field-«r2b»"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-«r2b»-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 4
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r2b»-items"
        aria-expanded="false"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«r2b»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to be used with a FieldControl 1`] = `
<div>
  <label
    class="junipero label invalid"
    for="name"
  >
    Name
  </label>
  <div
    class="junipero dropdown select-field dirty invalid searchable"
    id="name"
  >
    <div
      class="field dropdown-toggle"
      id="name-toggle"
    >
      <input
        id="name-field"
        readonly=""
        type="text"
        value="Linda"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="junipero abstract invalid"
  >
    Enter your name
  </div>
</div>
`;

exports[`<SelectField /> > should allow to clear a single value 1`] = `
<div>
  <div
    class="junipero dropdown select-field pristine valid searchable"
    id="junipero-select-field-«rd»"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-«rd»-toggle"
    >
      <input
        id="junipero-select-field-«rd»-field"
        readonly=""
        type="text"
        value="Item 1"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to clear a single value 2`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid searchable empty focused"
    id="junipero-select-field-«rd»"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-«rd»-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«rd»-items"
        aria-expanded="false"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«rd»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to clear multiple values at once 1`] = `
<div>
  <div
    class="junipero dropdown select-field pristine valid searchable focused multiple"
    id="junipero-select-field-«rp»"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-«rp»-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«rp»-items"
        aria-expanded="false"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«rp»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to clear multiple values at once 2`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid searchable empty focused multiple"
    id="junipero-select-field-«rp»"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-«rp»-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«rp»-items"
        aria-expanded="false"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«rp»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to delete items when hitting backspace 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable focused multiple"
    id="junipero-select-field-«r2j»"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-«r2j»-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info selected"
      >
        <span>
          Item 4
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r2j»-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«r2j»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-«r2j»-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r2j»-items-«r2o»"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to delete items when hitting backspace 2`] = `
<div>
  <div
    class="junipero dropdown opened select-field dirty valid searchable focused multiple"
    id="junipero-select-field-«r2j»"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-«r2j»-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r2j»-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«r2j»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-«r2j»-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r2j»-items-«r2o»"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to delete items when hitting backspace 3`] = `
<div>
  <div
    class="junipero dropdown opened select-field dirty valid searchable focused multiple"
    id="junipero-select-field-«r2j»"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-«r2j»-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info selected"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r2j»-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«r2j»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-«r2j»-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r2j»-items-«r2o»"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to delete items when hitting backspace 4`] = `
<div>
  <div
    class="junipero dropdown opened select-field dirty valid searchable focused multiple"
    id="junipero-select-field-«r2j»"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-«r2j»-toggle"
    >
      <span
        class="junipero tag info selected"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r2j»-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«r2j»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-«r2j»-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r2j»-items-«r2o»"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to delete items when hitting backspace 5`] = `
<div>
  <div
    class="junipero dropdown opened select-field dirty valid searchable focused multiple"
    id="junipero-select-field-«r2j»"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-«r2j»-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info selected"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r2j»-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«r2j»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-«r2j»-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r2j»-items-«r2o»"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to delete items when hitting backspace 6`] = `
<div>
  <div
    class="junipero dropdown opened select-field dirty valid searchable focused multiple"
    id="junipero-select-field-«r2j»"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-«r2j»-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r2j»-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«r2j»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-«r2j»-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r2j»-items-«r2o»"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to load more data on scroll > After scroll 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-«r4n»"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-«r4n»-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r4n»-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«r4n»-field"
        placeholder="Type a name"
        role="combobox"
        size="11"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-«r4n»-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r4s»"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r4t»"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r4u»"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r4v»"
            tabindex="0"
          >
            <a>
              Item 4
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r50»"
            tabindex="0"
          >
            <a>
              Item 5
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r51»"
            tabindex="0"
          >
            <a>
              Item 6
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r52»"
            tabindex="0"
          >
            <a>
              Item 7
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r53»"
            tabindex="0"
          >
            <a>
              Item 8
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r54»"
            tabindex="0"
          >
            <a>
              Item 9
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r55»"
            tabindex="0"
          >
            <a>
              Item 10
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r57»"
            tabindex="0"
          >
            <a>
              Item 11
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r58»"
            tabindex="0"
          >
            <a>
              Item 12
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r59»"
            tabindex="0"
          >
            <a>
              Item 13
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r5a»"
            tabindex="0"
          >
            <a>
              Item 14
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r5b»"
            tabindex="0"
          >
            <a>
              Item 15
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r5c»"
            tabindex="0"
          >
            <a>
              Item 16
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r5d»"
            tabindex="0"
          >
            <a>
              Item 17
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r5e»"
            tabindex="0"
          >
            <a>
              Item 18
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r5f»"
            tabindex="0"
          >
            <a>
              Item 19
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r5g»"
            tabindex="0"
          >
            <a>
              Item 20
            </a>
          </li>
          <div
            class="load-more"
          >
            <li
              class="junipero dropdown-item no-more-options"
              id="junipero-select-field-«r4n»-items-«r56»"
              tabindex="0"
            >
              🎉 No more options
            </li>
          </div>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to load more data on scroll > Before scroll 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-«r4n»"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-«r4n»-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r4n»-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«r4n»-field"
        placeholder="Type a name"
        role="combobox"
        size="11"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-«r4n»-items"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r4s»"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r4t»"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r4u»"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r4v»"
            tabindex="0"
          >
            <a>
              Item 4
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r50»"
            tabindex="0"
          >
            <a>
              Item 5
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r51»"
            tabindex="0"
          >
            <a>
              Item 6
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r52»"
            tabindex="0"
          >
            <a>
              Item 7
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r53»"
            tabindex="0"
          >
            <a>
              Item 8
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r54»"
            tabindex="0"
          >
            <a>
              Item 9
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r55»"
            tabindex="0"
          >
            <a>
              Item 10
            </a>
          </li>
          <div
            class="load-more"
          />
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to load more data on scroll > During scroll 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-«r4n»"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-«r4n»-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r4n»-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«r4n»-field"
        placeholder="Type a name"
        role="combobox"
        size="11"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu loading"
      data-floating-ui-focusable=""
      id="junipero-select-field-«r4n»-items"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r4s»"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r4t»"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r4u»"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r4v»"
            tabindex="0"
          >
            <a>
              Item 4
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r50»"
            tabindex="0"
          >
            <a>
              Item 5
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r51»"
            tabindex="0"
          >
            <a>
              Item 6
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r52»"
            tabindex="0"
          >
            <a>
              Item 7
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r53»"
            tabindex="0"
          >
            <a>
              Item 8
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r54»"
            tabindex="0"
          >
            <a>
              Item 9
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4n»-items-«r55»"
            tabindex="0"
          >
            <a>
              Item 10
            </a>
          </li>
          <div
            class="load-more"
          >
            <li
              class="junipero dropdown-item loader"
              id="junipero-select-field-«r4n»-items-«r56»"
              tabindex="0"
            >
              <div
                class="junipero spinner primary small"
              />
              Loading more options...
            </li>
          </div>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to render without a placeholder 1`] = `
<div>
  <div
    class="junipero dropdown select-field pristine valid searchable empty"
    id="junipero-select-field-«r8»"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-«r8»-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r8»-items"
        aria-expanded="false"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«r8»-field"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to reset the field 1`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid searchable"
    id="junipero-select-field-«r16»"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-«r16»-toggle"
    >
      <input
        id="junipero-select-field-«r16»-field"
        readonly=""
        type="text"
        value="David"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to reset the field 2`] = `
<div>
  <div
    class="junipero dropdown select-field pristine valid searchable"
    id="junipero-select-field-«r16»"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-«r16»-toggle"
    >
      <input
        id="junipero-select-field-«r16»-field"
        readonly=""
        type="text"
        value="John"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to search for an existing value 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-«r1p»"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-«r1p»-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r1p»-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«r1p»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value="Item 3"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-«r1p»-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r1p»-items-«r1u»"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to search for an existing value 2`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-«r1p»"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-«r1p»-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r1p»-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«r1p»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-«r1p»-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r1p»-items-«r1u»"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r1p»-items-«r21»"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r1p»-items-«r22»"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to search for an external value 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-«r23»"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-«r23»-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r23»-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«r23»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value="Item"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-«r23»-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r23»-items-«r28»"
            tabindex="0"
          >
            <a>
              Item 4
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to search for an external value 2`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid searchable focused"
    id="junipero-select-field-«r23»"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-«r23»-toggle"
    >
      <input
        id="junipero-select-field-«r23»-field"
        readonly=""
        type="text"
        value="Item 4"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should allow to use object options and display custom titles on a controlled field 1`] = `
<div>
  <p>
    Value: 
    item-3
  </p>
  <div
    class="junipero dropdown select-field dirty valid searchable"
    id="junipero-select-field-«r2v»"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-«r2v»-toggle"
    >
      <input
        id="junipero-select-field-«r2v»-field"
        readonly=""
        type="text"
        value="Item 3"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should be invalid if validation fails 1`] = `
<div>
  <div
    class="junipero dropdown select-field dirty invalid searchable"
    id="junipero-select-field-«ru»"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-«ru»-toggle"
    >
      <input
        id="junipero-select-field-«ru»-field"
        readonly=""
        type="text"
        value="Item 1"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should correctly update state values 1`] = `
<div>
  <label
    class="junipero label info"
  >
    Test
  </label>
  <div
    class="junipero text-field dirty valid"
  >
    <input
      class="field"
      id="textfield"
      placeholder="Test"
      type="text"
      value="Test123"
    />
  </div>
  <div
    class="junipero dropdown select-field dirty valid searchable"
    id="selectfield"
  >
    <div
      class="field dropdown-toggle"
      id="selectfield-toggle"
    >
      <input
        id="selectfield-field"
        readonly=""
        type="text"
        value="Item 3"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should not allow to change value when disabled 1`] = `
<div>
  <div
    class="junipero dropdown disabled select-field pristine valid searchable"
    id="junipero-select-field-«r1k»"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-«r1k»-toggle"
    >
      <input
        id="junipero-select-field-«r1k»-field"
        readonly=""
        type="text"
        value="Marc"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should not remove field previous values while hitting backspace, if search isnt empty 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable focused multiple"
    id="junipero-select-field-«r2p»"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-«r2p»-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r2p»-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«r2p»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value="Item"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-«r2p»-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r2p»-items-«r2u»"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should not remove field previous values while hitting backspace, if search isnt empty 2`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable focused multiple"
    id="junipero-select-field-«r2p»"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-«r2p»-toggle"
    >
      <span
        class="junipero tag info selected"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r2p»-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«r2p»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-«r2p»-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r2p»-items-«r2u»"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should not toggle on click if disabled > opened 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-«r3v»"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-«r3v»-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r3v»-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«r3v»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-«r3v»-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r3v»-items-«r44»"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r3v»-items-«r45»"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r3v»-items-«r46»"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should not toggle on click if disabled > still opened 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-«r3v»"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-«r3v»-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r3v»-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«r3v»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-«r3v»-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r3v»-items-«r44»"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r3v»-items-«r45»"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r3v»-items-«r46»"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should not toggle on click if searchable > opened 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-«r47»"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-«r47»-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r47»-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«r47»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-«r47»-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r47»-items-«r4c»"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r47»-items-«r4d»"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r47»-items-«r4e»"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should not toggle on click if searchable > still opened 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-«r47»"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-«r47»-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r47»-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«r47»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-«r47»-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r47»-items-«r4c»"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r47»-items-«r4d»"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r47»-items-«r4e»"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should render 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-«r0»"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-«r0»-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r0»-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«r0»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-«r0»-items"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r0»-items-«r5»"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r0»-items-«r6»"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r0»-items-«r7»"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should render multiple values 1`] = `
<div>
  <div
    class="junipero dropdown select-field pristine valid searchable focused multiple"
    id="junipero-select-field-«ri»"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-«ri»-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«ri»-items"
        aria-expanded="false"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«ri»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should render multiple values 2`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid searchable focused multiple"
    id="junipero-select-field-«ri»"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-«ri»-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«ri»-items"
        aria-expanded="false"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«ri»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should render multiple values 3`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid searchable focused multiple"
    id="junipero-select-field-«ri»"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-«ri»-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info"
      >
        <span>
          Item 3
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«ri»-items"
        aria-expanded="false"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«ri»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should select value with keyboard > closed 1`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid searchable"
    id="junipero-select-field-«r5h»"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-«r5h»-toggle"
    >
      <input
        id="junipero-select-field-«r5h»-field"
        readonly=""
        type="text"
        value="Item 2"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should select value with keyboard > opened 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty"
    id="junipero-select-field-«r5h»"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-«r5h»-toggle"
    >
      <input
        aria-activedescendant="junipero-select-field-«r5h»-items-«r5n»"
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r5h»-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«r5h»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-«r5h»-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r5h»-items-«r5m»"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item active"
            id="junipero-select-field-«r5h»-items-«r5n»"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r5h»-items-«r5o»"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should toggle on click if enabled > closed 1`] = `
<div>
  <div
    class="junipero dropdown select-field pristine valid searchable empty focused"
    id="junipero-select-field-«r3f»"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-«r3f»-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r3f»-items"
        aria-expanded="false"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«r3f»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should toggle on click if enabled > opened 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-«r3f»"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-«r3f»-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r3f»-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«r3f»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-«r3f»-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r3f»-items-«r3k»"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r3f»-items-«r3l»"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r3f»-items-«r3m»"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should toggle on click if not searchable > closed 1`] = `
<div>
  <div
    class="junipero dropdown select-field pristine valid empty"
    id="junipero-select-field-«r3n»"
  >
    <div
      class="field dropdown-toggle"
      id="junipero-select-field-«r3n»-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r3n»-items"
        aria-expanded="false"
        aria-haspopup="listbox"
        dir="ltr"
        disabled=""
        id="junipero-select-field-«r3n»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should toggle on click if not searchable > opened 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid empty"
    id="junipero-select-field-«r3n»"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-«r3n»-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r3n»-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        disabled=""
        id="junipero-select-field-«r3n»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-«r3n»-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r3n»-items-«r3s»"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r3n»-items-«r3t»"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r3n»-items-«r3u»"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should toggle on keyboard if enabled > back opened 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-«r4f»"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-«r4f»-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r4f»-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«r4f»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-«r4f»-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4f»-items-«r4k»"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4f»-items-«r4l»"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4f»-items-«r4m»"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should toggle on keyboard if enabled > closed 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-«r4f»"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-«r4f»-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r4f»-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«r4f»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-«r4f»-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4f»-items-«r4k»"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4f»-items-«r4l»"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4f»-items-«r4m»"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> > should toggle on keyboard if enabled > opened 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty focused"
    id="junipero-select-field-«r4f»"
  >
    <div
      class="field dropdown-toggle opened"
      id="junipero-select-field-«r4f»-toggle"
    >
      <input
        aria-autocomplete="list"
        aria-controls="junipero-select-field-«r4f»-items"
        aria-expanded="true"
        aria-haspopup="listbox"
        dir="ltr"
        id="junipero-select-field-«r4f»-field"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      id="junipero-select-field-«r4f»-items"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4f»-items-«r4k»"
            tabindex="0"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4f»-items-«r4l»"
            tabindex="0"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="junipero dropdown-item"
            id="junipero-select-field-«r4f»-items-«r4m»"
            tabindex="0"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;
